# mfem

./: .gitignore  CHANGELOG  makefile  mfem.hpp
.github/workflows/: builds-and-tests.yml
examples/: ex9.cpp  main.cpp
fem/: CMakeLists.txt  bilinearform_ext.cpp  bilininteg.cpp  bilininteg.hpp  dgmassinv.hpp  fespace.cpp  nonlininteg.hpp  qspace.cpp  restriction.cpp  restriction.hpp
fem/ceed/integrators/convection/: convection_qf.h
fem/ceed/integrators/diffusion/: diffusion_qf.h
fem/ceed/integrators/mass/: mass_qf.h
fem/ceed/integrators/nlconvection/: nlconvection_qf.h
fem/ceed/integrators/util/: util_qf.h
fem/ceed/interface/: coefficient.hpp  mixed_integrator.hpp  operator.hpp  util.cpp  util.hpp
fem/ceed/solvers/: algebraic.cpp  algebraic.hpp  full-assembly.cpp  solvers-atpmg.cpp
fem/integ/: bilininteg_convection_ea.cpp  bilininteg_convection_mf.cpp  bilininteg_convection_pa.cpp  bilininteg_curlcurl_mf.cpp  bilininteg_curlcurl_pa.cpp  bilininteg_dgtrace_ea.cpp  bilininteg_diffusion_ea.cpp  bilininteg_diffusion_mf.cpp  bilininteg_diffusion_pa.cpp  bilininteg_divdiv_mf.cpp  bilininteg_divdiv_pa.cpp  bilininteg_mass_ea.cpp  bilininteg_mass_kernels.hpp  bilininteg_mass_mf.cpp  bilininteg_mass_pa.cpp  bilininteg_transpose_ea.cpp  bilininteg_vecdiffusion_mf.cpp  bilininteg_vecdiffusion_pa.cpp  bilininteg_vecmass_mf.cpp  bilininteg_vecmass_pa.cpp  bilininteg_vectorfemass_mf.cpp  bilininteg_vectorfemass_pa.cpp  nonlininteg_vecconvection_mf.cpp  nonlininteg_vecconvection_pa.cpp
general/: array.hpp  communication.cpp  forall.hpp  table.hpp
linalg/: libBatchSolver.cpp  libBatchSolver.hpp  linalg.hpp  solvers.hpp  superlu.cpp  superlu.hpp
mesh/: mesh.cpp  mesh.hpp  pmesh.cpp  pmesh.hpp
miniapps/dpg/: makefile  pmaxwell-fem-tokamak.cpp  pmaxwell-primal-tokamak.cpp  pmaxwell-tokamak.cpp  read_gf.cpp
miniapps/dpg/util/: complexweakform.cpp
miniapps/hdiv-linear-solver/: hdiv_linear_solver.cpp
miniapps/meshing/: mesh-explorer.cpp
miniapps/radiation-diffusion/: energy_integrator.cpp  energy_integrator.hpp  main.cpp  makefile  mms.hpp  nonlinear_iteration.cpp  nonlinear_iteration.hpp  radiation_diffusion.cpp  radiation_diffusion.hpp
run/: ex0p.cpp  ex1p.cpp  ex2p.cpp  ex5p.cpp  ex9p.cpp  ptrs.cpp  template.cpp
spack-meta/: CMakeLists.txt  README.md
spack-meta/config/: mfem.astylerc
spack-meta/config/cmake/modules/: FindCEED.cmake  FindHYPRE.cmake  FindMETIS.cmake  FindMFEM.cmake  FindNAVIER.cmake  FindSUITESPARSE.cmake  FindSUNDIALS.cmake
spack-meta/data/: 2pi_square.msh  fpc_2d.msh2  square.msh
spack-meta/src/: CMakeLists.txt  ex1p.cpp
spack-meta/test/: AStyleTests.cpp  CMakeLists.txt  Test.cpp
